plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	//runtimeOnly 'com.h2database:h2'	//인메모리 DB
	implementation 'mysql:mysql-connector-java:8.0.32'
}


tasks.named('test') {
	useJUnitPlatform()
}

tasks.jar {
	enabled = false
}

tasks.bootJar {
	enabled = true
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

//jar {
//	enabled = false
//}